tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_30.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := ((((2 + x) DIV (- x)) * (+ (0 MOD 0))) <= (((1223 MOD 1) DIV (- y)) - (- (1 DIV 2))));
  (* error *)  p := ((((r - 0) DIV (x + 1223)) MOD (- (200 - y))) < (((1 MOD 2) DIV (y + 2)) MOD ((- 200) * (- 1223))));
               p := (((+ (200 + z)) DIV ((- z) + (+ 2))) # (((- 2) - (0 * 1223)) * (- (1 DIV 1))));
               x := ((((1223 * 2) - (z + 200)) MOD (+ (- 200))) * ((- (+ z)) - ((1223 + 1) - (z MOD y))));
               z := (+ ((- (0 + 2)) DIV ((1223 MOD 200) * (- 1223))));
               x := (+ (((z DIV 1223) * (- 2)) + (- (+ 1223))));
               y := ((- ((1 MOD z) + (- 200))) + (- (- (+ 0))));
               z := ((- ((2 * z) + (+ 0))) DIV (((2 + 0) * (0 DIV 200)) * ((200 - 200) MOD (1223 MOD x))));
               y := (((+ (z * 1223)) * ((y * 200) - (+ z))) DIV (+ ((1223 DIV y) MOD (1223 * 0))));
               x := (+ (- (+ (- 0))))
END Test12.